--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -194,7 +194,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 20. Upload files to dufs
-- Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs](../../LocalWorkShop/SyncTo-Dufs)
+- Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
 - Create dir `certs` in dufs: 
   - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
 
