--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -124,7 +124,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Deploy Nomad server to Day1 VM
+### 14. Deploy consul client to Day0 VM
+[TerraformWorkShop/Quadlet/consul-client](../../TerraformWorkShop/Quadlet/consul-client/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/consul-client"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 15. Deploy Nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -133,7 +142,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 15. Config Nomad OIDC login
+### 16. Config Nomad OIDC login
 copy nomad root token from Day1 VM
 ```shell
 less .local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
@@ -147,7 +156,7 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```  
 
-### 16. Config Vault JWT auth for nomad
+### 17. Config Vault JWT auth for nomad
 [TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Vault/Auth/JWT)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -156,7 +165,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 15. Config Consul JWT auth for nomad
+### 18. Config Consul JWT auth for nomad
 [TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Consul/Auth/JWT)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -165,7 +174,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 16. Deploy Nomad client to Day1 VM
+### 19. Deploy Nomad client to Day1 VM
 [TerraformWorkShop/System/nomad-client/](../../TerraformWorkShop/System/nomad-client/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -174,7 +183,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Deploy nomad nfs csi controller
+### 20. Deploy nomad nfs csi controller
 [TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-controller/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -184,7 +193,17 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```
 
-### 16. Deploy MinIO in Day1 VM
+### 21. Deploy nomad csi volumes
+[TerraformWorkShop/Nomad/Volulmes](../../TerraformWorkShop/Nomad/Volulmes/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Volulmes"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$env:NOMAD_TOKEN="cbd90fdf-a7d4-4f6f-0e6b-31b310964fd2"
+# terraform init; terraform apply ...
+```
+
+### 22. Deploy MinIO in Day1 VM
 [TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -193,7 +212,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Config Minio ACL and bucket in Day1 MinIO
+### 23. Config Minio ACL and bucket in Day1 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -201,6 +220,7 @@ $childPath="TerraformWorkShop/MinIO/IAM"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
 <!-- 
 ### 18. Deploy Grafana in Day1 VM
 [TerraformWorkShop/Quadlet/grafana](../../TerraformWorkShop/Quadlet/grafana/)
@@ -237,12 +257,4 @@ $childPath="TerraformWorkShop/Quadlet/alloy"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
-
-### 22. Deploy consul client to Day0 VM
-[TerraformWorkShop/Quadlet/consul-client](../../TerraformWorkShop/Quadlet/consul-client/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/consul-client"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-``` -->
+-->
