--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -14,3 +14,13 @@ $childPath="TerraformWorkShop/Hyper-V/VM-Day2-FCOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
+### 3. Deploy nomad nfs csi node
+[TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-nodes/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/nfs-nodes"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$env:NOMAD_TOKEN="xxx"
+# terraform init; terraform apply ...
+```
