--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -6,7 +6,16 @@
   - Copy nomad client cert and key content from https://vault.day1.sololab/ui/vault/secrets/kvv2-certs/kv/client.global.nomad
   - Go to in https://dufs.day0.sololab/certs/, create `client.global.nomad.crt`, `client.global.nomad.key` and paste cert and key content from above step
 
-### 2. Create Day2-FCOS VM
+### 2. Sync Day2 related container images to zot
+[LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 3. Create Day2-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day2-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day2-FCOS/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -15,12 +24,21 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 3. Deploy nomad nfs csi node
+### 4. Deploy nomad nfs csi node
 [TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-nodes/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/nfs-nodes"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $env:NOMAD_TOKEN="xxx"
+# terraform init; terraform apply ...
+```
+
+### 5. Deploy Grafana nomad job
+[TerraformWorkShop/Nomad/Jobs/grafana/](../../TerraformWorkShop/Nomad/Jobs/grafana/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/grafana/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
