nomad-deploy: remove consul boot dependency,

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -77,6 +77,7 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Vault/Identity/OIDC"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
+# You might need to run `terraform apply` twice
 ```
 
 ### 9. Config ACL policy in Vault
@@ -199,7 +200,7 @@ $env:NOMAD_TOKEN="xxx"
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Volulmes"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$env:NOMAD_TOKEN="cbd90fdf-a7d4-4f6f-0e6b-31b310964fd2"
+$env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```
 
