--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -34,6 +34,15 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```
 
+### 5. Deploy Traefik nomad job
+[TerraformWorkShop/Nomad/Jobs/traefik/](../../TerraformWorkShop/Nomad/Jobs/traefik/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/traefik/"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 5. Deploy Grafana nomad job
 [TerraformWorkShop/Nomad/Jobs/grafana/](../../TerraformWorkShop/Nomad/Jobs/grafana/)
 ```powershell
