doc-sololab: update doc

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -146,6 +146,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ### 16. Config Nomad OIDC login
 copy nomad root token from Day1 VM
 ```shell
+ssh Day1-FCOS
 less .local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
 ```
 Open [TerraformWorkShop/Nomad/ACL](../../TerraformWorkShop/Nomad/ACL/) in terminal, run
