--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -7,12 +7,11 @@
   - Go to in https://dufs.day0.sololab/certs/, create `client.global.nomad.crt`, `client.global.nomad.key` and paste cert and key content from above step
 
 ### 2. Sync Day2 related container images to zot
-[LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/)
+[LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
 ```
 
 ### 3. Create Day2-FCOS VM
