powerdns-deploy-vyos: deploy pdns into vyos container, treat it as external dns

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -27,21 +27,21 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ### Prepare ssh config
 Copy dir [LocalWorkShop/.ssh](../../LocalWorkShop/.ssh/) to user home dir
 
-### 5. Create VyOS VM
+### 5. Create data disks
+[TerraformWorkShop/Hyper-V/Disks-Data](../../TerraformWorkShop/Hyper-V/Disks-Data/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/Disks-Data"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 6. Create VyOS VM
 [TerraformWorkShop/Hyper-V/VM-VyOS](../../TerraformWorkShop/Hyper-V/VM-VyOS/)
 Then config shellcrash if need [TerraformWorkShop\Hyper-V\VM-VyOS\shellclash\README.md](../../TerraformWorkShop/Hyper-V/VM-VyOS/shellclash/README.md)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Hyper-V/VM-VyOS"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 6. Create data disks
-[TerraformWorkShop/Hyper-V/Disks-Data](../../TerraformWorkShop/Hyper-V/Disks-Data/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Hyper-V/Disks-Data"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
@@ -94,24 +94,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ### 10. Sync trivy-db to zot
 [LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1)
 
-<!-- ### 11. Deploy PowerDNS server in Day0 VM
-[TerraformWorkShop/Quadlet/powerdns/](../../TerraformWorkShop/Quadlet/powerdns/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/powerdns"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 12. Prepare DNS config for PowerDNS
-[TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/PowerDNS/zones"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-``` -->
-
 ### 11. Deploy etcd server in Day0 VM
 [TerraformWorkShop/Quadlet/etcd/](../../TerraformWorkShop/Quadlet/etcd/)
 ```powershell
@@ -129,6 +111,24 @@ $childPath="TerraformWorkShop/Quadlet/coredns"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
+### 13. Deploy PowerDNS server in VyOS
+[TerraformWorkShop/VyOS/Container-PowerDNS/](../../TerraformWorkShop/VyOS/Container-PowerDNS/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/Container-PowerDNS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 12. Prepare DNS config for PowerDNS
+[TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/PowerDNS/zones"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+``` -->
 
 ### 13. Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
