doc-sololab: add haproxy and powerdns in day0 vyos

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -113,22 +113,31 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 13. Deploy PowerDNS server in VyOS
-[TerraformWorkShop/VyOS/Container-PowerDNS/](../../TerraformWorkShop/VyOS/Container-PowerDNS/)
+[TerraformWorkShop/VyOS/Container-PowerDNS/](../../TerraformWorkShop/VyOS/Container-PDNS-Auth/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/VyOS/Container-PowerDNS"
+$childPath="TerraformWorkShop/VyOS/Container-PDNS-Auth"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 12. Prepare DNS config for PowerDNS
+### 14. Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/PowerDNS/zones"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-``` -->
+```
+
+### 15. Config haproxy in VyOS
+[TerraformWorkShop/VyOS/HAProxy](../../TerraformWorkShop/VyOS/HAProxy/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/HAProxy"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 13. Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
