docs-sololab: move vyos related ops in new file

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -1,51 +1,3 @@
-### 1. Provision VyOS VM image by packer
-[PackerWorkShop/VyOS](../../PackerWorkShop/VyOS)
-
-### 2. Prepare Terraform Plugins
-[TerraformWorkShop](../../TerraformWorkShop/README.md)
-
-### 3. Create and trust private root CA
-[TerraformWorkShop/TLS/RootCA](../../TerraformWorkShop/TLS/RootCA/)
-run:
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/TLS/RootCA"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-After provisioned resources in this dir, install the root.crt to trust ca dir.
-
-### 4. Create Hyper-V Internal Switch
-[TerraformWorkShop/Hyper-V/Switch-Internal](../../TerraformWorkShop/Hyper-V/Switch-Internal/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Hyper-V/Switch-Internal"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### Prepare ssh config
-Copy dir [LocalWorkShop/.ssh](../../LocalWorkShop/.ssh/) to user home dir
-
-### 5. Create data disks
-[TerraformWorkShop/Hyper-V/Disks-Data](../../TerraformWorkShop/Hyper-V/Disks-Data/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Hyper-V/Disks-Data"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 6. Create VyOS VM
-[TerraformWorkShop/Hyper-V/VM-VyOS](../../TerraformWorkShop/Hyper-V/VM-VyOS/)
-Then config shellcrash if need [TerraformWorkShop\Hyper-V\VM-VyOS\shellclash\README.md](../../TerraformWorkShop/Hyper-V/VM-VyOS/shellclash/README.md)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Hyper-V/VM-VyOS"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
 ### 7. Create Day0-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day0-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day0-FCOS/)
 1. Download FCOS Hyper-V image
@@ -63,12 +15,7 @@ if (-not (Test-Path $ImageDir)) {
 
 4. Rename the vhd to `fedora-coreos-hyperv.x86_64.vhdx` in `C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos`
 
-##### Prepare kvpctl tool
-1. Download kvpctl.exe from https://github.com/containers/libhvee/releases
-
-2. Extra exe file to C:\Windows
-
-##### Run terraform
+5. Run terraform
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Hyper-V/VM-Day0-FCOS"
@@ -108,33 +55,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/coredns"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 13. Deploy PowerDNS server in VyOS
-[TerraformWorkShop/VyOS/Container-PowerDNS/](../../TerraformWorkShop/VyOS/Container-PDNS-Auth/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/VyOS/Container-PDNS-Auth"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 14. Seed DNS record to PowerDNS
-[TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/PowerDNS/zones"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 15. Config haproxy in VyOS
-[TerraformWorkShop/VyOS/HAProxy](../../TerraformWorkShop/VyOS/HAProxy/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/VyOS/HAProxy"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
