--- a/Doc/SoloLab/0.Preparation.md
+++ b/Doc/SoloLab/0.Preparation.md
@@ -25,3 +25,11 @@ Add-LocalGroupMember -Group "Hyper-V Administrators" -Member "root"
 
 ### Prepare terraform provider
 [TerraformWorkShop/README.md](../../TerraformWorkShop/README.md)
+
+### Prepare kvpctl tool for fedora core os ignition 
+1. Download kvpctl.exe from https://github.com/containers/libhvee/releases
+2. Extra exe file to C:\Windows
+
+### Prepare skopeo to download and convert docker image to OCI image
+1. Download package for windows from https://github.com/passcod/winskopeo/releases
+2. Put it in C:\Windows\
