--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -1,5 +1,12 @@
 ### 1. Provision VyOS VM image by packer
 [PackerWorkShop/VyOS](../../PackerWorkShop/VyOS)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="PackerWorkShop/VyOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+packer init .\plugins.pkr.hcl
+.\Invoke-PackerBuild.ps1 '15s-cloudinit'
+```
 
 ### 2. Prepare Terraform Plugins
 [TerraformWorkShop](../../TerraformWorkShop/README.md)
@@ -76,6 +83,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/VyOS/Container-PDNS-Auth"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 13. Deploy PostgreSQL server in VyOS
+[TerraformWorkShop/VyOS/Container-PostgreSQL](../../TerraformWorkShop/VyOS/Container-PostgreSQL)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/Container-PostgreSQL"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
