vyos-container: debug script

--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -4,7 +4,7 @@
 $repoDir=git rev-parse --show-toplevel
 $childPath="PackerWorkShop/VyOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-packer init .\plugins.pkr.hcl
+# packer init .\plugins.pkr.hcl
 .\Invoke-PackerBuild.ps1 '15s-cloudinit'
 ```
 
