--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -87,14 +87,26 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Deploy PostgreSQL server in VyOS
-[TerraformWorkShop/VyOS/Container-PostgreSQL](../../TerraformWorkShop/VyOS/Container-PostgreSQL)
+### 13. Deploy Lynx server in VyOS
+[TerraformWorkShop/VyOS/Container-Lynx](../../TerraformWorkShop/VyOS/Container-Lynx)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/VyOS/Container-PostgreSQL"
+$childPath="TerraformWorkShop/VyOS/Container-Lynx"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+
+### 14. Init Lynx
+1. Go to https://lynx.vyos.sololab, input:
+```yaml
+Application Name: Lynx
+Application URL: https://lynx.vyos.sololab
+Application Email: lynx@mail.sololab
+Admin Email:  root@mail.sololab
+Admin Password: # ref from [TerraformWorkShop/LDAP/lldap/terraform.tfvars](../../TerraformWorkShop/LDAP/lldap/terraform.tfvars)
+```
+2. Go to top right corner -> profile -> show the Key (in right side), copy the api key
+3. 
 
 ### 13. Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
