--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -106,7 +106,12 @@ Admin Email:  root@mail.sololab
 Admin Password: # ref from [TerraformWorkShop/LDAP/lldap/terraform.tfvars](../../TerraformWorkShop/LDAP/lldap/terraform.tfvars)
 ```
 2. Go to top right corner -> profile -> show the Key (in right side), copy the api key
-3. 
+3. Create user, team, project, environment in lync [TerraformWorkShop/Lynx/vyos](../../TerraformWorkShop/Lynx/vyos/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Lynx/vyos"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+```
 
 ### 13. Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
