--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -87,6 +87,29 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+<!-- 
+### 13. Deploy OTF server (the terraform remote backend) in VyOS
+[TerraformWorkShop/VyOS/Container-OTF](../../TerraformWorkShop/VyOS/Container-OTF)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/Container-OTF"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+error: https://github.com/leg100/otf/issues/827
+also not flexible：to use hcp tf backend (aka terraform remote backend), you must create "workload" for each tfstate in hcp first
+### 14. Init OTF
+Create user, team, project, environment in otf [TerraformWorkShop/TFE/vyos](../../TerraformWorkShop/TFE/vyos/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/TFE/vyos"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```  
+-->
+
+
 ### 13. Deploy Lynx server in VyOS
 [TerraformWorkShop/VyOS/Container-Lynx](../../TerraformWorkShop/VyOS/Container-Lynx)
 ```powershell
@@ -111,7 +134,9 @@ Admin Password: # ref from [TerraformWorkShop/LDAP/lldap/terraform.tfvars](../..
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Lynx/vyos"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-```
+# terraform init; terraform apply ...
+``` 
+
 
 ### 13. Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
