--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -77,6 +77,7 @@ $childPath="TerraformWorkShop/VyOS/Container-CoreDNS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
+Now you can try add doh config in browser, `https://doh.sololab.dev/dns-query`
 
 ### 12. Deploy PowerDNS server in VyOS
 [TerraformWorkShop/VyOS/Container-PowerDNS/](../../TerraformWorkShop/VyOS/Container-PDNS-Auth/)
@@ -107,8 +108,6 @@ $childPath="TerraformWorkShop/TFE/vyos"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```  
--->
-
 
 ### 13. Deploy Lynx server in VyOS
 [TerraformWorkShop/VyOS/Container-Lynx](../../TerraformWorkShop/VyOS/Container-Lynx)
@@ -128,17 +127,35 @@ Application Email: lynx@mail.sololab
 Admin Email:  root@mail.sololab
 Admin Password: # ref from [TerraformWorkShop/LDAP/lldap/terraform.tfvars](../../TerraformWorkShop/LDAP/lldap/terraform.tfvars)
 ```
-2. Go to top right corner -> profile -> show the Key (in right side), copy the api key
-3. Create user, team, project, environment in lync [TerraformWorkShop/Lynx/vyos](../../TerraformWorkShop/Lynx/vyos/)
+1. Go to top right corner -> profile -> show the Key (in right side), copy the api key
+2. Create user, team, project, environment in lync [TerraformWorkShop/Lynx/vyos](../../TerraformWorkShop/Lynx/vyos/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Lynx/vyos"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ``` 
+-->
 
+### 13. Deploy MinIO server in VyOS
+[TerraformWorkShop/VyOS/Container-MinIO](../../TerraformWorkShop/VyOS/Container-MinIO)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/Container-MinIO"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
-### 13. Seed DNS record to PowerDNS
+### 14. Init MinIO
+[TerraformWorkShop/MinIO/VyOS](../../TerraformWorkShop/MinIO/VyOS)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/MinIO/VyOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+``` 
+
+### 15. Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -147,11 +164,20 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Config haproxy in VyOS
+### 16. Config haproxy in VyOS
 [TerraformWorkShop/VyOS/HAProxy](../../TerraformWorkShop/VyOS/HAProxy/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/VyOS/HAProxy"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 17. Deploy Cockpit WS in VyOS
+[TerraformWorkShop/VyOS/Container-Cockpit](../../TerraformWorkShop/VyOS/Container-Cockpit)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/VyOS/Container-Cockpit"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
