oci-ops: update oci sync script

--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -63,10 +63,26 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 9. Sync container image to zot
-[LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
+[LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+.\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc"
+# .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers
+```
 
 ### 10. Sync trivy-db to zot
-[LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1)
+[LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+.\Sync-TrivyDB.ps1 -SyncProfile "VyOS-Trivy.jsonc"
+# .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers"
+```
 
 
 ### 11. Deploy CoreDNS in VyOS
@@ -153,7 +169,7 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/MinIO/VyOS"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-``` 
+```
 
 ### 15. Seed DNS record to PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
