--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -36,10 +36,25 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 9. Sync container image to zot
-[LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
+[LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+.\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" -DownloadOnly $true
+```
 
 ### 10. Sync trivy-db to zot
-[LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1)
+[LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+.\Sync-TrivyDB.ps1 -SyncProfile "Day0-Trivy.jsonc"
+# .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers"
+```
 
 ### 11. Deploy etcd server in Day0 VM
 [TerraformWorkShop/Quadlet/etcd/](../../TerraformWorkShop/Quadlet/etcd/)
