postgrest-deploy-vyos-container: add image for test

--- a/Doc/SoloLab/1.VyOS.md
+++ b/Doc/SoloLab/1.VyOS.md
@@ -70,7 +70,7 @@ $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
 .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc"
-# .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers
+# .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers"
 ```
 
 ### 10. Sync trivy-db to zot
