--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -42,7 +42,8 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
-.\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" -DownloadOnly $true
+.\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" # -Upload $false
+# .\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
 
 ### 4. Sync trivy-db to zot
@@ -53,7 +54,7 @@ $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
 .\Sync-TrivyDB.ps1 -SyncProfile "Day0-Trivy.jsonc"
-# .\Sync-OCIImage.ps1 -SyncProfile "VyOS.jsonc" -LocalStore "D:/Users/Public/Downloads/containers"
+# .\Sync-OCIImage.ps1 -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers"
 ```
 
 ### 5. Deploy etcd server in Day0 VM
@@ -133,6 +134,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/dufs"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 13. Deploy sftpgo in Day0 VM
+[TerraformWorkShop/Quadlet/sftpgo](../../TerraformWorkShop/Quadlet/sftpgo/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/sftpgo"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
