sftpgo-deploy/ops: add auth plugin and config, sftpgo tf resource

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -129,20 +129,29 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Deploy dufs in Day0 VM
-[TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/dufs"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
 ### 13. Deploy sftpgo in Day0 VM
 [TerraformWorkShop/Quadlet/sftpgo](../../TerraformWorkShop/Quadlet/sftpgo/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/sftpgo"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 14. Config groups in sftpgo 
+[TerraformWorkShop/SFTPGo](../../TerraformWorkShop/SFTPGo/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/SFTPGo"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 13. Deploy dufs in Day0 VM
+[TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/dufs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
