--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -147,6 +147,17 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### 15. Upload files to sftpgo
+- Sync binary files to dufs [LocalWorkShop/SyncTo-SFTPGo/SyncTo-SFTPGo.ps1](../../LocalWorkShop/SyncTo-SFTPGo/SyncTo-SFTPGo.ps1)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/SyncTo-SFTPGo"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+.\SyncTo-SFTPGo.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
+# .\Sync-SFTPGo.ps1 -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/bin" -Upload $false
+```
+
+<!-- 
 ### 13. Deploy dufs in Day0 VM
 [TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
 ```powershell
@@ -159,9 +170,10 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ### 14. Upload files to dufs
 - Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
 - Create dir `certs` in dufs: 
-  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
+  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir 
+-->
 
-### 15. Deploy Prometheus-Podman-Exporter in Day0 VM
+### 16. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
