zot-deploy-podman-kube: move zot behind etcd, coredns, traefik, remove tls config

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -26,38 +26,7 @@ terraform apply --auto-approve
 For the reason the the ignition process can only run before VM first boot up, 
 we have to turn on the VM manually.
 
-### 2. Deploy zot image registry in Day0 VM
-[TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/zot"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 3. Sync container image to zot
-[LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="LocalWorkShop/Sync-OCIImage"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
-.\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" # -Upload $false
-# .\Sync-OCIImage.ps1 -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
-```
-
-### 4. Sync trivy-db to zot
-[LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="LocalWorkShop/Sync-OCIImage"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
-.\Sync-TrivyDB.ps1 -SyncProfile "Day0-Trivy.jsonc"
-# .\Sync-OCIImage.ps1 -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers"
-```
-
-### 5. Deploy etcd server in Day0 VM
+### 2. Deploy etcd server in Day0 VM
 [TerraformWorkShop/Quadlet/etcd/](../../TerraformWorkShop/Quadlet/etcd/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -66,7 +35,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 6. Deploy CoreDNS server in Day0 VM
+### 3. Deploy CoreDNS server in Day0 VM
 [TerraformWorkShop/Quadlet/coredns](../../TerraformWorkShop/Quadlet/coredns)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -75,16 +44,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 7. Deploy PostgreSQL database in Day0 VM
-[TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/postgresql-infra"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 8. Deploy Traefik proxy in Day0 VM
+### 4. Deploy Traefik proxy in Day0 VM
 [TerraformWorkShop/Quadlet/traefik-day0](../../TerraformWorkShop/Quadlet/traefik-day0)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -93,7 +53,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 9. Seed DNS record to etcd
+### 5. Seed DNS record to etcd
 [TerraformWorkShop/etcd/skydns](../../TerraformWorkShop/etcd/skydns)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -102,6 +62,48 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### 6. Deploy zot image registry in Day0 VM
+[TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/zot"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 7. Sync container image to zot
+[LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+.\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0.jsonc" # -Upload $false
+# .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
+```
+
+### 8. Sync trivy-db to zot
+[LocalWorkShop/Sync-OCIImage/](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+.\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc"
+# .\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy"
+```
+
+
+### 9. Deploy PostgreSQL database in Day0 VM
+[TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/postgresql-infra"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+<!-- 
 ### 10. Deploy Cockpit web console in Day0 VM
 [TerraformWorkShop/Quadlet/cockpit](../../TerraformWorkShop/Quadlet/cockpit)
 ```powershell
@@ -109,9 +111,10 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/cockpit"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-```
+``` 
+-->
 
-### 11. Deploy LLDAP server in Day0 VM
+### 10. Deploy LLDAP server in Day0 VM
 [TerraformWorkShop/Quadlet/lldap](../../TerraformWorkShop/Quadlet/lldap)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -120,7 +123,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 12. Seed LDAP data in LLDAP
+### 11. Seed LDAP data in LLDAP
 [TerraformWorkShop/LDAP/lldap/](../../TerraformWorkShop/LDAP/lldap/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -129,7 +132,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Deploy sftpgo in Day0 VM
+<!-- 
+### 12. Deploy sftpgo in Day0 VM
 [TerraformWorkShop/Quadlet/sftpgo](../../TerraformWorkShop/Quadlet/sftpgo/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -138,26 +142,26 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Config groups in sftpgo 
-[TerraformWorkShop/SFTPGo](../../TerraformWorkShop/SFTPGo/)
+### 13. Config groups in sftpgo 
+[TerraformWorkShop/SFTPGo](../../TerraformWorkShop/SFTPGo/Management)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/SFTPGo"
+$childPath="TerraformWorkShop/SFTPGo/Management"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 15. Upload files to sftpgo
-- Sync binary files to dufs [LocalWorkShop/SyncTo-SFTPGo/SyncTo-SFTPGo.ps1](../../LocalWorkShop/SyncTo-SFTPGo/SyncTo-SFTPGo.ps1)
+### 14. Upload files to sftpgo
+- Sync binary files to sftpgo [LocalWorkShop/SyncTo-SFTPGo/SyncTo-SFTPGo.ps1](../../LocalWorkShop/SyncTo-SFTPGo/SyncTo-SFTPGo.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/SyncTo-SFTPGo"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 .\SyncTo-SFTPGo.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
 # .\Sync-SFTPGo.ps1 -SyncProfile "Day0.jsonc" -LocalStore "D:/Users/Public/Downloads/bin" -Upload $false
-```
+``` 
+-->
 
-<!-- 
 ### 13. Deploy dufs in Day0 VM
 [TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
 ```powershell
@@ -169,9 +173,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 
 ### 14. Upload files to dufs
 - Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/SyncTo-Dufs"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+.\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
+# .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/bin" -Upload $false
+``` 
 - Create dir `certs` in dufs: 
   - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir 
--->
 
 ### 16. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
