dufs-ops: improve script to download secret from vault

--- a/Doc/SoloLab/2.Day0.md
+++ b/Doc/SoloLab/2.Day0.md
@@ -88,7 +88,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
 .\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc"
 # .\Sync-TrivyDB.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day0-Trivy.jsonc" -LocalStore "D:/Users/Public/Downloads/containers/trivy"
 ```
@@ -172,16 +172,17 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 14. Upload files to dufs
-- Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
+- Sync files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/SyncTo-Dufs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-.\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
-# .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/bin" -Upload $false
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+.\SyncTo-Dufs.ps1 -SyncProfile "Day1.jsonc" # -Upload $false
+# .\SyncTo-Dufs.ps1 -SyncProfile "Day1.jsonc" -LocalStore "D:/Users/Public/Downloads/bin" -Upload $false
 ``` 
-- Create dir `certs` in dufs: 
-  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir 
+<!-- - Create dir `certs` in dufs: 
+  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir  -->
 
 ### 16. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
