--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -1,10 +1,13 @@
 ### 1. Upload files to dufs
-- Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs](../../LocalWorkShop/SyncTo-Dufs)
-
-- Create dir `certs` in dufs: 
-  - Login Vault server https://vault.day1.sololab/ui/vault/auth?with=ldap with credential of LDAP user `000`
-  - Copy nomad client cert and key content from https://vault.day1.sololab/ui/vault/secrets/kvv2-certs/kv/client.global.nomad
-  - Go to in https://dufs.day0.sololab/certs/, create `client.global.nomad.crt`, `client.global.nomad.key` and paste cert and key content from above step
+- Sync files to dufs [LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1](../../LocalWorkShop/SyncTo-Dufs/SyncTo-Dufs.ps1)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/SyncTo-Dufs"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+.\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
+# .\SyncTo-Dufs.ps1 -SyncProfile "Day1.jsonc" -LocalStore "D:/Users/Public/Downloads/
+```
 
 ### 2. Sync Day2 related container images to zot
 [LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
