oci-ops: add no_proxy env var, add bin file validation

--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -13,7 +13,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
 .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day1.jsonc" # -Upload $false
 # .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day1.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
@@ -158,7 +158,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 copy nomad root token from Day1 VM
 ```shell
 ssh Day1-FCOS
-less .local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
+less /home/podmgr/.local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
 ```
 Open [TerraformWorkShop/Nomad/ACL](../../TerraformWorkShop/Nomad/ACL/) in terminal, run
 ```powershell
