--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -6,7 +6,7 @@ $childPath="LocalWorkShop/SyncTo-Dufs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
 .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
-# .\SyncTo-Dufs.ps1 -SyncProfile "Day1.jsonc" -LocalStore "D:/Users/Public/Downloads/
+# .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/bin"
 ```
 
 ### 2. Sync Day2 related container images to zot
@@ -15,6 +15,9 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+.\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day2.jsonc" # -Upload $false
+# .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
 
 ### 3. Create Day2-FCOS VM
