doc: update no_proxy, add script to get nomad token

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -4,7 +4,7 @@
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/SyncTo-Dufs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab,consul"
 .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" # -Upload $false
 # .\SyncTo-Dufs.ps1 -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/bin"
 ```
@@ -15,7 +15,7 @@ $proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:N
 $repoDir=git rev-parse --show-toplevel
 $childPath="LocalWorkShop/Sync-OCIImage"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab"
+$proxy="127.0.0.1:7890"; $env:HTTP_PROXY=$proxy; $env:HTTPS_PROXY=$proxy; $env:NO_PROXY="sololab,consul"
 .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day2.jsonc" # -Upload $false
 # .\Sync-OCIImage.ps1 -PrivateRegistry "zot.day0.sololab" -SyncProfile "Day2.jsonc" -LocalStore "D:/Users/Public/Downloads/containers" -Upload $false
 ```
@@ -35,7 +35,25 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Nomad/Jobs/nfs-nodes"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-$env:NOMAD_TOKEN="xxx"
+
+# get nomad management token from vault
+# login vault
+$credential = Get-Credential -Message "credential to login vault"
+
+$vaultBaseUri = New-Object System.Uri("https://vault.day1.sololab/")
+$vaultLoginEndpoint = "/v1/auth/ldap/login/$($credential.UserName)"
+$vaultLoginUri = New-Object System.Uri($vaultBaseUri, "/v1/auth/ldap/login/$($credential.UserName)")
+$vaultLoginUri.AbsoluteUri
+$vaultToken = $(curl.exe -s --request POST `
+    --data "{`"password`": `"$($credential.GetNetworkCredential().Password)`"}" `
+    $vaultLoginUri | jq.exe .auth.client_token).Replace('"', '')
+# get nomad token from kvv2 secret backend
+$vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2-nomad/data/token-management")
+$env:NOMAD_TOKEN = $(curl.exe -s -X GET `
+    -H "X-Vault-Token: $VaultToken" `
+    $secretUri | jq.exe .data.data.token ).Replace('"', '')
+
+# $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```
 
