oci-ops: add comments

--- a/Doc/SoloLab/4.Day2.md
+++ b/Doc/SoloLab/4.Day2.md
@@ -51,7 +51,7 @@ $vaultToken = $(curl.exe -s --request POST `
 $vaultSecretUri = New-Object System.Uri($vaultBaseUri, "/v1/kvv2-nomad/data/token-management")
 $env:NOMAD_TOKEN = $(curl.exe -s -X GET `
     -H "X-Vault-Token: $VaultToken" `
-    $secretUri | jq.exe .data.data.token ).Replace('"', '')
+    $vaultSecretUri.AbsoluteUri | jq.exe .data.data.token ).Replace('"', '')
 
 # $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
