--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -127,6 +127,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### 14. Deploy Consul-Template in Day1 VM
+[TerraformWorkShop/Quadlet/consul-template](../../TerraformWorkShop/Quadlet/consul-template/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/consul-template"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 14. Deploy consul client to Day0 VM
 [TerraformWorkShop/Quadlet/consul-client](../../TerraformWorkShop/Quadlet/consul-client/)
 ```powershell
