--- a/Doc/SoloLab/3.Day1.md
+++ b/Doc/SoloLab/3.Day1.md
@@ -45,7 +45,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 5. Config PKI Day1 intermediate CA in Vault
+### 5. Config PKI intermediate CA in Vault
 [TerraformWorkShop/Vault/Secrets/PKI/Int_CA](../../TerraformWorkShop/Vault/Secrets/PKI/Int_CA)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
